# drf-quickstart

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: django.yml
src/api/: admin.py  models.py  serializers.py  urls.py  views.py
src/api/management/commands/: send_reminders.py
src/api/migrations/: 0001_initial.py  0002_reminder_reminder_day.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/tests/: conftest.py  send_reminders_test.py  views_test.py
